scripts/logfile.txt
Thu Mar 17 11:48:33 CST 2022
Empieza validación de actualizaciones diarias

Cambiando nombre de archivos...
Descargando archivo nuevo...
Comparando archivos...
  File "compare.py", line 48
    for i in 
            ^
SyntaxError: invalid syntax
git add history.md changelog.md
git commit
On branch main
Your branch is up to date with 'origin/main'.

Changes not staged for commit:
	deleted:    history.txt
	modified:   scripts/logfile.txt

Untracked files:
	actualizaciones_agro.sh
	agro_actual.csv
	agro_anterior.csv
	compare.py
	logfile.txt
	prueba.csv
	pruebas.sh

no changes added to commit
git push
Everything up-to-date
Proceso terminado!
